# hackathon-3-learning-platform

./: AGENTS.md  CLAUDE.md  FEATURES.md
backend/: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260509_create_better_auth_tables.py  20260510_1525_83d6013dce9b_add_user_daily_identifier_type.py  20260510_1530_create_code_sessions_table.py  20260511_add_chat_session_title_surface.py  20260517_create_quiz_sessions_table.py  20260518_add_mastery_snapshots.py  20260518_teacher_dashboard.py  20260519_add_classes_and_memberships.py
backend/api/: index.py
backend/scripts/: cleanup_sessions.py
backend/src/: config.py  dependencies.py  main.py
backend/src/auth/: dependencies.py  models.py  routes.py  service.py
backend/src/llm/: prompts.py
backend/src/models/: __init__.py  agent_exercise.py  agent_session.py  classroom.py  code_session.py  quiz_session.py  teacher_classes.py  user.py
backend/src/repositories/: agent_session_repository.py  analytics_repository.py  class_exercise_repository.py  class_membership_repository.py  class_repository.py  code_session_repository.py  exercise_repository.py  mastery_snapshot_repository.py  progress_repository.py  quiz_session_repository.py  teacher_exercise_repository.py  user_repository.py
backend/src/schemas/: agent_responses.py  agents.py  code_editor.py  code_execution.py  dashboard.py  quiz.py  student_classes.py  teacher.py
backend/src/services/: chat_quota_service.py  class_service.py  code_execution_service.py  (+6 more)
backend/tests/: conftest.py
(+266 files in other folders)
